2006-01-15  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Anders.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6561
        run-javascriptcore-tests doesn't work

        * JavaScriptCore/tests/mozilla/Getopt/Mixed.pm: 
        Changed revision number to 1.8 (broken by svn migration).

2006-01-14  David Kilzer  <ddkilzer@kilzer.net>

        Reviewed and landed by Anders.

        * kjs/create_hash_table: Fixed comment typo.

2006-01-13  Maks Orlovich   <maksim@kde.org>

        Mostly merging work by Peter Kelly. Reviewed by Maciej, landed by ap.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6261
        Misc. array object fixes from KJS

        * kjs/array_object.cpp: Don't treat 2^32-1 as a real array index property.
        (ArrayInstance::getOwnPropertySlot): Ditto.
        (ArrayInstance::deleteProperty): Ditto.
        (ArrayInstance::put): Ditto.
        (ArrayInstance::propList): Added a FIXME comment.
        (ArrayInstance::put): Throw exception on trying to set invalid array length.
        (ArrayProtoFunc::callAsFunction): Do not use a separator argument when doing toString/toLocalString.
        * kjs/array_object.h: Added MAX_ARRAY_INDEX.

2006-01-13  Darin Adler  <darin@apple.com>

        - Replaced tabs with spaces in source files that had less than 10 lines with tabs.
        - Set allow-tabs Subversion property in source files that have more than 10 lines with tabs.

2006-01-13  Anders Carlsson  <andersca@mac.com>

        Reviewed by Eric.

        * kjs/create_hash_table:
        Use correct size variables.

2006-01-13  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        * kjs/create_hash_table:
        Don't create an empty entry array, instead add a entry with all fields
        set to null and set the hash table size to 1.
        
        * kjs/lookup.cpp:
        (findEntry):
        Remove the hash table size check

2006-01-12  Anders Carlsson  <andersca@mac.com>
