@@ -101,7 +101,7 @@ namespace KXMLCore {
         ReferenceType operator*() const { return *reinterpret_cast<PointerType>(m_impl.operator->()); }
         PointerType operator->() const { return &(operator*()); }
         
-        iterator& operator++()
+        const_iterator& operator++()
         {
             ++m_impl;
             return *this;
@@ -110,12 +110,12 @@ namespace KXMLCore {
         // postfix ++ intentionally omitted
         
         // Comparison.
-        bool operator==(const iterator& other) const
+        bool operator==(const const_iterator& other) const
         { 
             return m_impl == other.m_impl; 
         }
         
-        bool operator!=(const iterator& other) const 
+        bool operator!=(const const_iterator& other) const 
         { 
             return m_impl != other.m_impl; 
         }
